-bugfix (tabindex=-1) for all AsideMenuItems because manipulations with tab breaking component styles - fix overflow in NotesMain (I am too stupid to fix it in one commit) - fix toaster position (same stuff, I am too stupid) - textarea bugfix (if page was reloaded it was a small area while not typing)

--- a/src/assets/styles/Button.css
+++ b/src/assets/styles/Button.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     transition: .24s ease;
+    outline: none;
 }
 
 .button .button__content {
