--- a/src/assets/styles/Notes.module.css
+++ b/src/assets/styles/Notes.module.css
@@ -20,5 +20,5 @@
     flex-grow: 1;
     padding: 35px;
     position: relative;
-    overflow-y: hidden;
+    overflow-y: scroll;
 }
